[package]
name = "examples"
version = "0.1.0"
edition = "2021"
authors = [
    "Pierre Krieger <pierre.krieger1708@gmail.com>",
    "The vulkano contributors",
]
publish = false

[dependencies]
# The `vulkano` crate is the main crate that you must use to use Vulkan.
vulkano = { path = "../vulkano", features = ["serde"] }
# Provides the `shader!` macro that is used to generate code for using shaders.
vulkano-shaders = { path = "../vulkano-shaders" }
# The Vulkan library doesn't provide any functionality to create and handle windows, as
# this would be out of scope. In order to open a window, we are going to use the `winit` crate.
winit = "0.28"
vulkano-util = { path = "../vulkano-util" }

cgmath = "0.18"
glium = "0.32.1"
png = "0.17"
rand = "0.8.4"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Glium has still not been updated to the latest winit version
winit_glium = { package = "winit", version = "0.27.1" }
