[workspace]
members = ["*"]
resolver = "2"

[workspace.dependencies]
cgmath = "0.18"
png = "0.17"
rand = "0.8"
ron = "0.8"
serde = "1.0"
vulkano = { path = "../vulkano" }
vulkano-macros = { path = "../vulkano-macros" }
vulkano-shaders = { path = "../vulkano-shaders" }
vulkano-util = { path = "../vulkano-util" }
winit = { version = "0.29", features = ["rwh_05"] }
