[package]
name = "glsl-to-spirv"
version = "0.1.3"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
repository = "https://github.com/tomaka/vulkano"
description = "Wrapper around the official GLSL to SPIR-V compiler"
license = "MIT/Apache-2.0"
build = "build/build.rs"
categories = ["rendering::graphics-api"]

[dependencies]
tempdir = "0.3.5"

[build-dependencies]
cmake = "0.1.19"
