[package]
name = "vulkano-derive"
version = "0.17.0"
edition = "2018"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "The vulkano contributors"]
repository = "https://github.com/vulkano-rs/vulkano"
description = "Custom derive for vulkano traits"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/vulkano"
homepage = "https://vulkano.rs"
keywords = ["vulkan", "bindings", "graphics", "gpu", "rendering"]
categories = ["rendering::graphics-api"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "1.0"
