[package]
name = "vulkano-macros"
version = { workspace = true }
edition = "2021"
authors = ["The vulkano contributors"]
repository = "https://github.com/vulkano-rs/vulkano/tree/master/vulkano-macros"
description = "Macros used by vulkano"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/vulkano-macros"
homepage = "https://vulkano.rs"
keywords = ["vulkan", "bindings", "graphics", "gpu", "rendering"]
categories = ["rendering::graphics-api"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-crate = { workspace = true }

[dev-dependencies]
vulkano = { workspace = true }
