[package]
name = "vulkano-macros"
version = "0.35.0"
authors = ["The vulkano contributors"]
repository = "https://github.com/vulkano-rs/vulkano/tree/master/vulkano-macros"
description = "Macros used by vulkano"
documentation = "https://docs.rs/vulkano-macros"
readme = "../README.md"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--extend-css", "assets/rustdoc.css"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
proc-macro-crate = { workspace = true }
