[package]
name = "vulkano-shader-derive"
version = "0.10.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "The vulkano contributors"]
repository = "https://github.com/vulkano-rs/vulkano"
description = "Safe wrapper for the Vulkan graphics API"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/vulkano"
categories = ["rendering::graphics-api"]

[lib]
name = "vulkano_shader_derive"
proc-macro = true

[dependencies]
glsl-to-spirv = { version = "0.1.6", path = "../glsl-to-spirv" }
syn = "0.14"
vulkano-shaders = { version = "0.10", path = "../vulkano-shaders" }

[dev-dependencies]
vulkano = { version = "0.10", path = "../vulkano" }
