[package]
name = "vulkano-shader-derive"
version = "0.11.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "The vulkano contributors"]
repository = "https://github.com/vulkano-rs/vulkano"
description = "Deprecated"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/vulkano"
categories = []
