[package]
name = "vulkano-shaders"
version = "0.34.0"
edition = "2021"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "The vulkano contributors"]
repository = "https://github.com/vulkano-rs/vulkano/vulkano-shaders"
description = "Macro for generating Rust code from shaders"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/vulkano-shaders"
homepage = "https://vulkano.rs"
keywords = ["vulkan", "bindings", "graphics", "gpu", "rendering"]
categories = ["rendering::graphics-api"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
ahash = "0.8"
heck = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
shaderc = "0.8"
syn = { version = "2.0", features = ["full", "extra-traits"] }
vulkano = { version = "0.34.0", path = "../vulkano", default-features = false }

[features]
shaderc-build-from-source = ["shaderc/build-from-source"]
shaderc-debug = []
