[package]
name = "vulkano-shaders"
version = "0.35.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "The vulkano contributors"]
repository = "https://github.com/vulkano-rs/vulkano/tree/master/vulkano-shaders"
description = "Macro for generating Rust code from shaders"
documentation = "https://docs.rs/vulkano-shaders"
readme = "../README.md"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
proc-macro = true

[dependencies]
foldhash = { workspace = true }
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
shaderc = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
vulkano = { workspace = true }

[features]
shaderc-build-from-source = ["shaderc/build-from-source"]
shaderc-debug = []

[lints]
workspace = true
