[package]
name = "vulkano-taskgraph"
version = "0.34.0"
authors = ["The vulkano contributors"]
repository = "https://github.com/vulkano-rs/vulkano/tree/master/vulkano-taskgraph"
description = "Vulkano's task graph implementation"
documentation = "https://docs.rs/vulkano-taskgraph"
readme = "../README.md"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
ash = { workspace = true }
concurrent-slotmap = { workspace = true }
parking_lot = { workspace = true }
rangemap = { workspace = true }
smallvec = { workspace = true }
thread_local = { workspace = true }
vulkano = { workspace = true }

[lints]
workspace = true
