[package]
name = "vulkano-util"
version = "0.34.0"
repository = "https://github.com/vulkano-rs/vulkano/tree/master/vulkano-util"
description = "Utility functionality to make usage of vulkano easier"
documentation = "https://docs.rs/vulkano-util"
readme = "../README.md"
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
ahash = { workspace = true }
vulkano = { workspace = true }
winit = { workspace = true }

[lints]
workspace = true
