[package]
name = "vulkano-win"
version = "0.30.0"
edition = "2021"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "The vulkano contributors"]
repository = "https://github.com/vulkano-rs/vulkano"
description = "Link between vulkano and winit"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/vulkano"
homepage = "https://vulkano.rs"
keywords = ["vulkan", "bindings", "graphics", "gpu", "rendering"]
categories = ["rendering::graphics-api"]

[features]
default = ["winit_", "raw-window-handle_"]
winit_ = ["winit", "objc", "core-graphics-types"]
raw-window-handle_ = ["raw-window-handle"]

[dependencies]
raw-window-handle = { version = "0.4", optional = true }
vulkano = { version = "0.30.0", path = "../vulkano" }
winit = { version = "0.27", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc = { version = "0.2.5", optional = true }
core-graphics-types = { version = "0.1", optional = true }