[package]
name = "vulkano"
version = "0.34.0"
edition = "2021"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "The vulkano contributors"]
repository = "https://github.com/vulkano-rs/vulkano/tree/master/vulkano"
description = "Safe wrapper for the Vulkan graphics API"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/vulkano"
homepage = "https://vulkano.rs"
keywords = ["vulkan", "bindings", "graphics", "gpu", "rendering"]
categories = ["rendering::graphics-api"]
readme = "../README.md"
build = "build.rs"

[dependencies]
ahash = { workspace = true }
ash = { workspace = true }
bytemuck = { workspace = true, features = ["min_const_generics"] }
crossbeam-queue = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }
libloading = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true, features = ["send_guard"] }
raw-window-handle = { workspace = true }
serde = { workspace = true, optional = true }
smallvec = { workspace = true }
thread_local = { workspace = true }
vulkano-macros = { workspace = true, optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc = { workspace = true }
core-graphics-types = { workspace = true }

[build-dependencies]
ahash = { workspace = true }
heck = { workspace = true }
indexmap = { workspace = true }
once_cell = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
vk-parse = { workspace = true }

[dev-dependencies]
cgmath = { workspace = true }
nalgebra = { workspace = true }

[features]
default = ["macros"]
macros = ["dep:vulkano-macros"]
document_unchecked = []
