[package]
name = "vulkano"
version = "0.34.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "The vulkano contributors"]
repository = "https://github.com/vulkano-rs/vulkano/tree/master/vulkano"
description = "Safe wrapper for the Vulkan graphics API"
documentation = "https://docs.rs/vulkano"
readme = "../README.md"
build = "build.rs"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
ahash = { workspace = true }
ash = { workspace = true }
bytemuck = { workspace = true, features = ["min_const_generics"] }
crossbeam-queue = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }
libloading = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true, features = ["send_guard"] }
raw-window-handle = { workspace = true, features = ["std"] }
serde = { workspace = true, optional = true }
slabbin = { workspace = true }
smallvec = { workspace = true }
thread_local = { workspace = true }
vulkano-macros = { workspace = true, optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc = { workspace = true }
core-graphics-types = { workspace = true }

[build-dependencies]
ahash = { workspace = true }
heck = { workspace = true }
indexmap = { workspace = true }
nom = { workspace = true }
once_cell = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
vk-parse = { workspace = true }

[features]
default = ["macros"]
macros = ["dep:vulkano-macros"]
document_unchecked = []

[lints]
workspace = true
