[package]
name = "vulkano"
version = "0.35.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "The vulkano contributors"]
repository = "https://github.com/vulkano-rs/vulkano/tree/master/vulkano"
description = "Safe wrapper for the Vulkan graphics API"
documentation = "https://docs.rs/vulkano"
readme = "../README.md"
build = "build.rs"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
ash = { workspace = true }
bytemuck = { workspace = true, features = ["min_const_generics"] }
crossbeam-queue = { workspace = true }
foldhash = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }
libloading = { workspace = true }
parking_lot = { workspace = true, features = ["send_guard"] }
raw-window-handle = { workspace = true, features = ["std"] }
serde = { workspace = true, optional = true }
slabbin = { workspace = true }
smallvec = { workspace = true }
thread_local = { workspace = true }
vulkano-macros = { workspace = true, optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
raw-window-metal = { workspace = true }

[target.'cfg(any(target_os = "dragonfly", target_os = "freebsd", target_os = "hurd", target_os = "illumos", target_os = "linux", target_os = "netbsd", target_os = "openbsd", target_os = "solaris"))'.dependencies]
x11-dl = { workspace = true, optional = true }
x11rb = { workspace = true, features = ["allow-unsafe-code"], optional = true }

[build-dependencies]
foldhash = { workspace = true }
heck = { workspace = true }
indexmap = { workspace = true }
nom = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
vk-parse = { workspace = true }

[dev-dependencies]
libc = "0.2.153"

[features]
default = ["macros", "x11"]
document_unchecked = []
macros = ["dep:vulkano-macros"]
x11 = ["dep:x11-dl", "dep:x11rb"]

[lints]
workspace = true
