[package]
name = "async-update"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "async-update"
path = "main.rs"

[dependencies]
cgmath = { workspace = true }
rand = { workspace = true }
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
winit = { workspace = true }
