[package]
name = "async-update"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "async-update"
path = "main.rs"
test = false
bench = false
doc = false

[dependencies]
glam = { workspace = true }
rand = { workspace = true }
vulkano = { workspace = true, features = ["macros"]  }
vulkano-shaders = { workspace = true }
winit = { workspace = true }
