[package]
name = "dynamic-local-size"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "dynamic-local-size"
path = "main.rs"
test = false
bench = false
doc = false

[dependencies]
png = { workspace = true }
vulkano = { workspace = true, features = ["macros"]  }
vulkano-shaders = { workspace = true }
