[package]
name = "gl-interop"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "gl-interop"
path = "main.rs"
test = false
bench = false
doc = false

[dependencies]
glium = "0.32.1"
vulkano = { workspace = true, default-features = true }
vulkano-shaders = { workspace = true }
winit = { workspace = true, default-features = true }
# Glium has still not been updated to the latest winit version
winit_glium = { package = "winit", version = "0.27.1" }
