[package]
name = "gl-interop"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "gl-interop"
path = "main.rs"
test = false
bench = false
doc = false

[dependencies]
glium = "0.36"
glutin-winit = "0.5"
vulkano = { workspace = true, default-features = true }
vulkano-shaders = { workspace = true }
winit = { workspace = true, default-features = true }
