[package]
name = "immutable-sampler"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "immutable-sampler"
path = "main.rs"
test = false
bench = false
doc = false

[dependencies]
png = { workspace = true }
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
winit = { workspace = true }
