[package]
name = "indirect"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "indirect"
path = "main.rs"
test = false
bench = false
doc = false

[dependencies]
vulkano = { workspace = true, features = ["macros"]  }
vulkano-shaders = { workspace = true }
winit = { workspace = true }
