[package]
name = "instancing"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "instancing"
path = "main.rs"
test = false
bench = false
doc = false

[dependencies]
vulkano = { workspace = true, features = ["macros"]  }
vulkano-shaders = { workspace = true }
winit = { workspace = true }
