[package]
name = "interactive-fractal"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "interactive-fractal"
path = "main.rs"

[dependencies]
cgmath = { workspace = true }
rand = { workspace = true }
vulkano = { workspace = true }
vulkano-shaders = { workspace = true }
vulkano-util = { workspace = true }
winit = { workspace = true }
